--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "angular-socialshare",
+    "name": "angular-socialsharing",
     "version": "0.0.0",
     "homepage": "https://github.com/pasupulaphani/angular-socialshare",
     "authors": [
