--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "socialsharing",
+  "name": "angular-socialsharing",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
