--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "name": "socialsharing",
-    "version": "0.0.0",
+    "version": "0.1.0",
+    "main": "./dist/angular-socialsharing.js",
     "homepage": "https://github.com/pasupulaphani/angular-socialshare",
     "authors": [
         "pasupulaphani <pasupulaphani@gmail.com>"
