--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,18 @@
 {
-  "name": "angular-socialshare",
-  "version": "0.0.0",
-  "homepage": "https://github.com/pasupulaphani/angular-socialshare",
-  "authors": [
-    "pasupulaphani <pasupulaphani@gmail.com>"
-  ],
-  "moduleType": [
-    "amd"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ]
+    "name": "angular-socialsharing",
+    "version": "0.0.0",
+    "main": "./dist/angular-socialsharing.js",
+	"homepage": "https://github.com/pasupulaphani/angular-socialshare",
+	"authors": [
+		"pasupulaphani <pasupulaphani@gmail.com>"
+	],
+    "license": "MIT",
+    "dependencies": {
+        "angular": "~1.0.7"
+    },
+    "devDependencies": {
+        "angular-mocks": "~1.0.7",
+        "angular-scenario": "~1.0.7"
+    }
 }
+
