--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,13 @@
 		"pasupulaphani <pasupulaphani@gmail.com>"
 	],
     "license": "MIT",
+    "ignore": [
+		"**/.*",
+		"node_modules",
+		"bower_components",
+		"test",
+		"tests"
+	],
     "dependencies": {
         "angular": "~1.0.7"
     },
