--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "angular-socialsharing",
   "version": "0.0.1",
   "dependencies": {
-    "grunt-karma": "^0.9.0",
-    "karma": "^0.12.25"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
@@ -22,14 +20,14 @@
     "grunt-usemin": "~2.3.0",
     "grunt-svgmin": "~0.4.0",
     "grunt-rev": "~0.1.0",
-    "grunt-karma": "~0.8.3",
+    "grunt-karma": "^0.9.0",
     "grunt-open": "~0.2.0",
     "grunt-concurrent": "~0.5.0",
     "matchdep": "~0.3.0",
     "connect-livereload": "~0.4.0",
     "grunt-google-cdn": "~0.4.0",
     "grunt-ngmin": "~0.0.2",
-    "karma": "~0.12.17",
+    "karma": "^0.12.25",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.4"
   },
