--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-usemin": "~2.3.0",
     "karma": "^0.12.25",
     "karma-chrome-launcher": "~0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "matchdep": "~0.3.0"
