--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "angular-socialsharing",
-    "version": "0.0.4",
+    "version": "0.0.8",
     "main": "./dist/angular-socialsharing.js",
     "homepage": "https://github.com/pasupulaphani/angular-socialshare",
     "authors": [
@@ -31,7 +31,8 @@
         "bower.json",
         "Gruntfile.js",
         "package.json",
-        "README.md"
+        "README.md",
+        "static"
     ],
     "dependencies": {
         "angular": "~1.0.7"
