--- a/bower.json
+++ b/bower.json
@@ -1,44 +1,18 @@
 {
-    "name": "angular-socialsharing",
-    "version": "0.1.0",
-    "main": "./dist/angular-socialsharing.js",
-    "homepage": "https://github.com/pasupulaphani/angular-socialshare",
-    "authors": [
-        "pasupulaphani <pasupulaphani@gmail.com>"
-    ],
-    "license": "MIT",
-    "description": "Share via Facebook feed and Twitter intents",
-    "keywords": [
-        "angular",
-        "social",
-        "shares",
-        "tweets",
-        "facebook",
-        "intents",
-        "feed"
-    ],
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests",
-        ".bowerrc",
-        ".gitignore",
-        ".jshintignore",
-        ".jshintrc",
-        ".editorconfig",
-        "bower.json",
-        "Gruntfile.js",
-        "package.json",
-        "README.md",
-        "static"
-    ],
-    "dependencies": {
-        "angular": "~1.0.7"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.0.7",
-        "angular-scenario": "~1.0.7"
-    }
+  "name": "ang",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "^1.3.0",
+    "json3": "^3.3.0",
+    "es5-shim": "^4.0.0",
+    "bootstrap-sass-official": "^3.2.0",
+    "angular-route": "^1.3.0",
+    "angular-sanitize": "^1.3.0",
+    "angular-touch": "^1.3.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.0",
+    "angular-scenario": "~1.3.0"
+  },
+  "appPath": "app"
 }
