--- a/bower.json
+++ b/bower.json
@@ -40,5 +40,10 @@
     "devDependencies": {
         "angular-mocks": "~1.0.7",
         "angular-scenario": "~1.0.7"
-    }
+    },
+    "locations": [
+        "http://ngmodules.org/modules/angular-socialsharing",
+        "http://pasupulaphani.github.io/angular-socialsharing/#/",
+        "http://bower.io/search/?q=angular-socialsharing"
+    ]
 }
