added istanbul for test coverage

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
+    "preinstall": "npm i -g grunt-cli bower karma-cli codeclimate-test-reporter istanbul",
     "test": "./node_modules/.bin/karma start karma-unit.conf.js --single-run --browsers PhantomJS,Firefox"
   }
 }
