--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_script:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g grunt-cli bower karma-cli codeclimate-test-reporter
+  - npm run preinstall
   - bower install --force
 addons:
   code_climate:
     repo_token: fb2ad28458590b7b24b14a74991de6d7d985db4d6ae43e59588115245babc906
 after_script:
-  - cat lcov.info | codeclimate
+  - cat coverage/lcov.info | codeclimate
