--- a/package.json
+++ b/package.json
@@ -38,6 +38,6 @@
   },
   "scripts": {
     "preinstall": "npm i -g grunt-cli bower karma-cli codeclimate-test-reporter",
-    "test": "./node_modules/.bin/karma start karma-unit.conf.js --single-run --browsers PhantomJS,Firefox"
+    "test": "./node_modules/.bin/karma start karma-unit.conf.js --single-run --browsers PhantomJS,Chrome,Firefox"
   }
 }
