encrypt travis token

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - bower install --force
 addons:
   code_climate:
-    repo_token: fb2ad28458590b7b24b14a74991de6d7d985db4d6ae43e59588115245babc906
+    repo_token:
+        secure: "IwgfzGF699NXpYclBprsxweu0fqslh1VxdAf0s+QbDnT+p1rPae54SFMp1wCZ6skzS4Sh6TakPQ8aGA9wylx25fkif4hq5Wqdj3t+BRnCOj5i5t7gYFCzcu9as7qXl2H8sQi4ilIXxsbvQZxIJOsjdKqwQyKFNcmbiPpnegpp2c="
 after_script:
   - cat coverage/phantomjs/lcov.info | codeclimate
